--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -23,6 +23,11 @@
   font-size: 20px;
 }
 
+#confirm-button {
+  background-color: green;
+  color: white;
+}
+
 .child {
   color: red;
   font-size: 14px;
@@ -31,4 +36,8 @@
 div.text {
   color: green;
   font-size: 22px;
+}
+
+.text .child {
+  color: red;
 }
